--- a/styles/user.css
+++ b/styles/user.css
@@ -1,6 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap');
+@font-face {
+    font-family: 'Fugaz One';
+    src: url('/fonts/FugazOne-Regular.ttf');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
 
 .header-custom {
-    font: 30pt Fugaz One, sans-serif;
+    font: 30pt Fugaz One;
     color: #ffbe2e o !important;
 }
